--- a/.github/workflows/main_lee-profi.yml
+++ b/.github/workflows/main_lee-profi.yml
@@ -1,4 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
 name: Build and deploy Node.js app to Azure Web App - lee-profi
@@ -22,7 +21,17 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '22.x'
+          cache: 'npm' # 💡 新增：开启 npm 缓存，这会让以后的部署快很多
 
+      # 💡 新增步骤 1：安装你的项目依赖 (生成 node_modules)
+      - name: Install dependencies
+        run: npm ci # 如果你没有 package-lock.json 文件，请把这里改成 npm install
+
+      # 💡 新增步骤 2：编译打包 Next.js 项目 (生成 .next 产物)
+      - name: Build project
+        run: npm run build
+
+      # 将包含依赖和编译产物的完整项目打包上传给 deploy 阶段
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -46,4 +55,4 @@ jobs:
           app-name: 'lee-profi'
           slot-name: 'Production'
           package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_CBE24C65D6CF4DE1A18D92C65852A482 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_76EC72A0F0DA4330A3588E662B6593CB }}
