--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@
 .DS_Store
 *.pem
 npm-debug.log*
-.env*.local
+.env
+.env.local
+.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 .vercel
 *.tsbuildinfo
