feat: add mongo migration script

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Admin CMS 管理员密码（生产环境必须设置）
 ADMIN_PASSWORD=
+
+# MongoDB 连接串（部署到 Azure 等只读文件系统时必填，替代 data/cms.json）
+MONGODB_URI=mongodb://localhost:27017/lee-cms
