更新后台控制，更新简历section，更新操作逻辑

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@
 ADMIN_PASSWORD=
 
 # MongoDB 连接串（部署到 Azure 等只读文件系统时必填，替代 data/cms.json）
-MONGODB_URI=mongodb://localhost:27017/lee-cms
+MONGODB_URI=
