--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/typography": "^0.5.19",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.0",
-    "lucide-react": "^0.400.0",
+    "lucide-react": "^0.575.0",
+    "md-editor-rt": "^6.3.1",
     "mongoose": "^9.2.1",
     "next": "^14.2.0",
     "react": "^18.3.0",
@@ -20,8 +21,11 @@
     "react-easy-crop": "^5.5.6",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^16.1.0",
+    "recharts": "^3.7.0",
     "remark-gfm": "^4.0.1",
-    "tailwind-merge": "^2.2.0"
+    "swr": "^2.4.0",
+    "tailwind-merge": "^2.2.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
