--- a/.github/workflows/main_lee-profi.yml
+++ b/.github/workflows/main_lee-profi.yml
@@ -1,4 +1,5 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
+# More GitHub Actions for Azure: https://github.com/Azure/actions
 
 name: Build and deploy Node.js app to Azure Web App - lee-profi
 
@@ -12,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -21,22 +22,26 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '22.x'
-          cache: 'npm' # 💡 新增：开启 npm 缓存，这会让以后的部署快很多
+          cache: 'npm'
 
-      # 💡 新增步骤 1：安装你的项目依赖 (生成 node_modules)
       - name: Install dependencies
-        run: npm ci # 如果你没有 package-lock.json 文件，请把这里改成 npm install
+        run: npm ci
 
-      # 💡 新增步骤 2：编译打包 Next.js 项目 (生成 .next 产物)
       - name: Build project
         run: npm run build
 
-      # 将包含依赖和编译产物的完整项目打包上传给 deploy 阶段
+      # 💡 核心修改 1：将必须的静态资源复制到 standalone 文件夹中
+      - name: Copy static files to standalone
+        run: |
+          cp -r public .next/standalone/ || true
+          cp -r .next/static .next/standalone/.next/
+
+      # 💡 核心修改 2：只打包并上传精简版文件夹，彻底抛弃外部庞大的 node_modules
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: .next/standalone # 以前这里是 "."
 
   deploy:
     runs-on: ubuntu-latest
@@ -54,5 +59,5 @@ jobs:
         with:
           app-name: 'lee-profi'
           slot-name: 'Production'
-          package: .
+          package: . # 这里保持 "." 不变，因为下载下来的 artifact 本身就已经是精简版了
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_76EC72A0F0DA4330A3588E662B6593CB }}
